fix featured content parallax scroll on mobile

--- a/style.css
+++ b/style.css
@@ -343,14 +343,9 @@ footer {
       /*margin-bottom: 90px;*/
     }
 
-    .site-branding,
-    .site-header.home-page .site-branding {
-      margin: 10px 0 70px 0;
-    }
-
-    .featured-section {
+    /*.featured-section {
         margin-top: 70px;
-    }
+    }*/
 
 }
 
@@ -402,21 +397,13 @@ footer {
       font-size: 1.3em;
     }
 
-    .site-branding {
-        margin: 40px 0 60px 0;
-    }
-
     .site-header {
         background-size: cover;
     }
 
-    .site-header.home-page .site-branding {
-        margin: 120px 0 180px 0;
-    }
-
-    .featured-section {
+    /*.featured-section {
         margin-top: 0;
-    }
+    }*/
 
 }
 
@@ -814,21 +801,6 @@ div.video-container {
     /*background-size: cover;*/
 }
 
-.site-branding {
-    float: left;
-    clear: both;
-    display: block;
-    width: 100%;
-    /*padding: 0 15px;*/
-    /*margin: 40px 0 60px 0;*/
-}
-
-.site-branding a {
-    width: 100%;
-    height: 100%;
-    display: block;
-}
-
 #site-logo a {
     width: 215px;
     height: 94px;
@@ -918,10 +890,6 @@ div.video-container {
     position: relative;
     top: 2px;
     margin-right: 4px;
-}
-
-#featured-section {
-    /*margin-top: 0;*/
 }
 
 .home-page .branding {
